# cae-saas-demo

./: README.md  deploy.py
cae-demo/: README.md  angular.json  package-lock.json  package.json
cae-demo/src/: index.html  styles.css
cae-demo/src/app/: app-routing.module.ts  app.component.spec.ts  app.component.ts
cae-demo/src/app/components/geometry/: geometry.component.css  geometry.component.html  geometry.component.ts
cae-demo/src/wasm/: CMakeLists.txt  main.cpp
cae-demo/src/wasm/src/viewer/: WasmOcctView.cpp  WasmOcctView.h
docs/: 3rdpartylicenses.txt  index.html  ngsw.json  polyfills.462ee280620f7600.js  styles.941cab7d727fa4f8.css
docs/assets/: download-cad-icon.svg:Zone.Identifier
public/: 404.html  index.html  main.8f700e70402b2bec.js  main.a057b7cad5c06a8e.js  main.e08a82d1380597ab.js  manifest.webmanifest  ngsw.json  runtime.80c3d2bf34d55d35.js
